[metadata]
name = chalet
version = 1.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir = 
  = src
include_package_data = True
packages = find:
install_requires =
   pandera>=0.13.4
   pandas>=1.4.1
   numpy>=1.22.3
   hirola>=0.3.0
   networkx>=2.8.8
   xpress>=9.2.5
   matplotlib>=3.6.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    chalet = cli.main:main

[options.extras_require]
testing =
    coverage[toml]
    pytest >= 6
    pytest-cov

dev =
    black
    build
    isort
    flake8
    mypy
    tox<5
    wheel

[flake8]
max-line-length = 120
extend-ignore = E203
